--- a/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
+++ b/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
@@ -71,16 +71,16 @@
   <ItemGroup>
     <Compile Include="Controllers\DAQHandler.cs" />
     <Compile Include="Controllers\PIDController.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ControlSystem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ControlSystem.Designer.cs">
+      <DependentUpon>ControlSystem.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ControlSystem.resx">
+      <DependentUpon>ControlSystem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
