--- a/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
+++ b/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\DAQHandler.cs" />
+    <Compile Include="Controllers\OPCWriter.cs" />
     <Compile Include="Controllers\PIDController.cs" />
     <Compile Include="ControlSystem.cs">
       <SubType>Form</SubType>
