--- a/USN-ControlSystem-NI-MS.Test/USN-ControlSystem-NI-MS.Test.csproj
+++ b/USN-ControlSystem-NI-MS.Test/USN-ControlSystem-NI-MS.Test.csproj
@@ -49,11 +49,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\USN-ControlSystem-NI-MS\USN-ControlSystem-NI-MS.csproj">
+      <Project>{33a03e2d-854a-4b47-bd3a-52075a79981a}</Project>
+      <Name>USN-ControlSystem-NI-MS</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
