--- a/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
+++ b/USN-ControlSystem-NI-MS/USN-ControlSystem-NI-MS.csproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AirHeaterModel.cs" />
     <Compile Include="Controllers\DAQHandler.cs" />
+    <Compile Include="Controllers\ForwardEuler.cs" />
     <Compile Include="Controllers\LowpassFilter.cs" />
     <Compile Include="Controllers\PIDController.cs" />
     <Compile Include="ControlSystem.cs">
