--- a/USN-DataLogging/App.config
+++ b/USN-DataLogging/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<appSettings>
+		<add key="connectionString" value="Data Source=NO01NBSTROMA01\SQLEXPRESS;Initial Catalog=MeasurementSites;Persist Security Info=True;User ID=sa;Password=admin123!" />
+		<add key="measurementSite" value="USN" />
+	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
