Opc host name app settings

--- a/USN-DataLogging/App.config
+++ b/USN-DataLogging/App.config
@@ -3,6 +3,7 @@
 	<appSettings>
 		<add key="connectionString" value="Data Source=NO01NBSTROMA01\SQLEXPRESS;Initial Catalog=MeasurementSites;Persist Security Info=True;User ID=sa;Password=admin123!" />
 		<add key="measurementSite" value="USN" />
+		<add key="opcHostName" value="opc.tcp://localhost:4840/" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
